<?xml version="1.0"?>
<package format="3">
  <name>liboculus</name>
  <version>3.0.0</version>
  <description>A ROS version of the Oculus sonar codebase</description>

  <maintainer email="amarburg@uw.edu">Aaron Marburg</maintainer>
  <author email="amarburg@uw.edu">Aaron Marburg</author>

  <license>BSD-3-Clause</license>
  <license>GPLv3</license>

  <depend>spdlog</depend>
  <depend>fmt</depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend>boost</build_depend>

  <exec_depend>boost</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
